--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
         <div clas="topnavCON">
             <div class="topnavINN">
                     <ul>
-                        <a href="TLE10 EG7.html" target="_blank" rel="nonopener norefferer"><li id="paging">Quarter 1</li></a>
-                        <a href="https://b4cnetwork1.w3spaces.com" target="_blank" rel="nonopener norefferer"><li id="paging">Quarter 2</li></a>
-                        <li id="paging">Quarter 3</li>
+                        <a href="TLE10 EG7.html"><li id="paging">Quarter 1</li></a>
+                        <a href="TLE10_Q2" ><li id="paging">Quarter 2</li></a>
+                        <a href="index.html" ><li id="paging">Quarter 3</li></a>
                     </ul>
             </div>
         </div>
