--- a/TLE10_Q2.html
+++ b/TLE10_Q2.html
@@ -212,7 +212,16 @@
         <div class="openingimg">
             <img src="https://drive.google.com/uc?export=view&id=1OL3P2LVmfQgLC__MUAcgAo_nU3p0QuUE" height="60%" width="60%">
         </div>
-
+ <!--topnav-->
+        <div clas="topnavCON">
+            <div class="topnavINN">
+                    <ul>
+                        <a href="TLE10 EG7.html"><li id="paging">Quarter 1</li></a>
+                        <a href="TLE10_Q2" ><li id="paging">Quarter 2</li></a>
+                        <a href="index.html" ><li id="paging">Quarter 3</li></a>
+                    </ul>
+            </div>
+        </div>
         <!--Sidenav-->
         <div class="navbar" id="mySidenav">
             <div class="innernav">
