--- a/TLE10 EG7.html
+++ b/TLE10 EG7.html
@@ -91,7 +91,16 @@
                 </ol>
             </div>
         </div>
-
+ <!--topnav-->
+        <div clas="topnavCON">
+            <div class="topnavINN">
+                    <ul>
+                        <a href="TLE10 EG7.html"><li id="paging">Quarter 1</li></a>
+                        <a href="TLE10_Q2" ><li id="paging">Quarter 2</li></a>
+                        <a href="index.html" ><li id="paging">Quarter 3</li></a>
+                    </ul>
+            </div>
+        </div>
 		<div class="Slide1" id="1">
 		<h1>GROUP#2 MEMBERS:</h1>
 		
