--- a/TLE10_Q2.html
+++ b/TLE10_Q2.html
@@ -341,8 +341,8 @@
                 Our chosen platform for promoting our stream is Instagram considering how much people use Instagram and crowd the social media platform, we will be using its popularity and large numbers of users to our advantage.
             </h3>
             
-            <img class="poster" src="https://drive.google.com/uc?export=view&id=1p1_rLs6J_FBsBnK2-NIUUpCLNEUbfTn3" style="align-items:left;" height="480px" width="334px">
-            <img class="poster" src="https://drive.google.com/uc?export=view&id=1PXsFlGjddIVv3TPMlN3SRp3f7JOEbaBM" style="align-items:right;" height="480px" width="334px">
+            <img class="poster" src="B4C_POSTER1.png" style="align-items:left;" height="480px" width="334px">
+            <img class="poster" src="B4C_POSTER2.png" style="align-items:right;" height="480px" width="334px">
 
             <h3>
                 The images above are the created promotional posters for our stream where we invite anybody who are interested to join into our discussion about the topic.
