--- a/TLE10 EG7.html
+++ b/TLE10 EG7.html
@@ -73,6 +73,38 @@
 			border-radius: 40px;
 			margin: 5px 25px 5px 25px;
 		}
+			.topnavCON {
+                width: auto;
+                height: auto;
+                background-color:#5d4941;
+                display: block;
+                position: absolute;
+            }
+
+            .topnavINN {
+                width: auto;
+                height: 65px;
+                display: block;
+                background-color:#5d4941;
+                padding: 0.5% 0% 0% 0%;
+            }
+
+            .topnavINN li {
+                padding: 1% 2.5% 1% 2.5%;
+                float: left;
+                font-size: auto;  
+            }
+
+            .topnavINN ul {
+                list-style-type: none;
+            }
+
+            #paging:hover {
+                background-color: #e0cebe;
+            }
+            .topnavINN li:hover {
+                color: #5d4941;
+            }
 		
 		</style>
 	</head>
