--- a/TLE10_Q2.html
+++ b/TLE10_Q2.html
@@ -204,7 +204,38 @@
             #smh:hover {
                 background-color: #7d685f;
             }
+.topnavCON {
+                width: auto;
+                height: auto;
+                background-color:#5d4941;
+                display: block;
+                position: absolute;
+            }
 
+            .topnavINN {
+                width: auto;
+                height: 65px;
+                display: block;
+                background-color:#5d4941;
+                padding: 0.5% 0% 0% 0%;
+            }
+
+            .topnavINN li {
+                padding: 1% 2.5% 1% 2.5%;
+                float: left;
+                font-size: auto;  
+            }
+
+            .topnavINN ul {
+                list-style-type: none;
+            }
+
+            #paging:hover {
+                background-color: #e0cebe;
+            }
+            .topnavINN li:hover {
+                color: #5d4941;
+            }
         </style>
     </head>
     <body>
