--- a/TLE10_Q2.html
+++ b/TLE10_Q2.html
@@ -241,7 +241,7 @@
     <body>
         <!--SLIDE IMAGE-->
         <div class="openingimg">
-            <img src="B4C_Podcasts" height="60%" width="60%">
+            <img src="B4C_Podcasts.png" height="60%" width="60%">
         </div>
  <!--topnav-->
         <div clas="topnavCON">
