--- a/index.html
+++ b/index.html
@@ -322,26 +322,26 @@
     </div>
 
     <div class="slide2">
-        <h1 id="2">II. Section Two Title</h1>
+        <h1 id="2">II. Things that went well</h1>
         <p>The stream flowed smoothly, everyone was speaking confidently and they were clear enough for the audience to understand what they were saying although there were some mistakes such as an unexpected switching to Tagalog by one speaker (though just a single word slipped in) and another struggling to get their point across. But, despite the mistakes that were made, most of the hosts were able to improvise making the livestream a success.  Most of us were also able to get our point and the information we have gathered through our research to the viewers, which also allowed us to get interactions with the viewers when it came to entertaining their questions about any issues that had to do with TikTok addiction. Overall, the stream went great in terms of content, specifically getting the information across and how we were able to entertain our viewers by the end of the stream.
         </p>
 
     </div>
 
     <div class="slide1">
-        <h1 id="3">III. Section Three Title</h1>
+        <h1 id="3">III. Areas of Opportunities</h1>
         <p>After a complete review of our stream, not only did we see some strengths but also areas of opportunity. Areas of opportunities in terms of stream layout design, video/audio quality, and engagement of the viewers. First off, we had a problem with the chat box display. Not all messages could fit into the chat box and there were issues with the chroma key such as the other colors blending in when they are not supposed to. This can be viewed as a distraction instead of a good design layout. Second, the video/audio was good enough but there are scenes where parts of an audio from the person speaking are not heard which makes for viewers to not hear them properly. The video quality is already viewable but it can be improved as the quality is 720p but it can be further improved to at least 1080p or possibly even 4k. The Internet speed can greatly affect the stream quality as there are some scenes where the stream freezes or is reduced down to 360p, so having an improvement on it can greatly boost the stream quality. Lastly, during our stream, the only engagement we had with the viewers was during the Q&A part. The engagement improvement may be necessary, as the stream’s viewership may be affected since the boredom of a viewer may result in them leaving. Finding ways to interact or make the stream more fun for the viewers would be something that could be improved.
         </p>
     </div>
     <div class="slide2">
-        <h1 id="5">IV. Section Four Title</h1>
+        <h1 id="5">IV. The Level of Engagement</h1>
         <p>During our stream we had a total of 81 views, most of which were very interactive. They would add their insights and ask a lot of questions during the Q&A of our stream. The questions and inputs of our viewers really allowed us to dive deeper into the topic and answer questions that were relevant to the viewers. Things like how they can help a family member who deals with TikTok addiction, how to fix the relationship of the teenager with their parent, or how they can deal with certain situations that include TikTok addiction. The questions of the viewers challenged our knowledge of the topic and to share what we have learned and researched to help the viewers who asked or to at least give our suggestion on their issue. Being able to do this allowed us to accomplish one of the goals of our research which is to help teenagers overcome their challenges with TikTok addiction whether it be the individual themselves or someone in their life.</p>
         <p>Although our high viewer interaction was in the Q&A, the earlier stages of our stream barely had any viewer interaction and may have left most bored and affected the experience for the viewers.
         </p>
 
     </div>
     <div class="slide1">
-        <h1 id="11">V. Section Five Title</h1>
+        <h1 id="11">V. Reasons for the level of viewership</h1>
         <p>During our stream we had high viewership because we sent our YouTube link to the people we know and we posted every now and then. Doing those things allowed us to be able to gain more viewers and catch more attention from people who may be interested in our stream or topic. Posting every now and then or posting updates on our stream allowed us to increase the reach of our promotion and to catch more people to join our stream. We also sent the link to our YouTube stream to people we know so that they could watch our stream.
         </p>
     </div>
