--- a/TLE10_Q2.html
+++ b/TLE10_Q2.html
@@ -240,7 +240,9 @@
     <body>
         <!--SLIDE IMAGE-->
         <div class="openingimg">
+            <center>
             <img src="B4C_Podcasts.png" height="60%" width="60%">
+            </center>
         </div>
  <!--topnav-->
         <div clas="topnavCON">
