--- a/index.html
+++ b/index.html
@@ -258,9 +258,11 @@
     </head>
     <body>
         <!--SLIDE IMAGE-->
+        <center>
         <div class="openingimg">
-            <img src="B4C_Podcasts.png" height="60%" width="60%" style="padding: 0px 0px 0px 350px">
+            <img src="B4C_Podcasts.png" height="60%" width="60%">
         </div>
+        </center>
 
         <!--topnav-->
         <div clas="topnavCON">
