--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
                 height: 100%;
                 width: 100%;
                 margin-bottom: 20px;
+                display:flex;
+                align-item:center;
             }
 
             .topnavCON {
