--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 height: 100%;
                 width: 100%;
                 margin-bottom: 20px;
-                
+                display: flex;
             }
 
             .topnavCON {
